# Phosphophyllite

./: .gitignore  build.gradle  changelog.md  gradle.properties  readme.md  settings.gradle
.github/workflows/: builds.yaml  publish.yaml
scripts/: buildcpp.py  prebuilds.py  process_shaders.py
src/main/java/net/roguelogix/phosphophyllite/: Phosphophyllite.java  PhosphophylliteConfig.java
src/main/java/net/roguelogix/phosphophyllite/blocks/: PhosphophylliteOre.java  PhosphophylliteOreQuartzTESR.java  PhosphophylliteOreTile.java
src/main/quartzpp/: CMakeLists.txt  test.cpp
src/main/quartzpp/include/glad/: glad.h
src/main/quartzpp/include/glm/: LICENCE.txt
src/main/quartzpp/src/: glad.c
src/main/quartzpp/src/common/: OperationMode.cpp  OperationMode.hpp  QuartzBlockRenderInfo.cpp  QuartzBlockRenderInfo.hpp  Queues.cpp  Queues.hpp  Shader.cpp  Shader.hpp  jni.cpp  jni.hpp
src/main/quartzpp/src/common/JNI/: net_roguelogix_phosphophyllite_quartz_client_gl46cpp_JNI.h  net_roguelogix_phosphophyllite_quartz_internal_gl46cpp_JNI.h  net_roguelogix_phosphophyllite_quartz_internal_rendering_gl46cpp_JNI.h
src/main/quartzpp/src/gl46/: GL46.cpp  GL46.hpp  README.md  Textures.cpp  Textures.hpp  WorldManager.cpp  WorldManager.hpp
src/main/resources/: pack.mcmeta  phosphophyllite.mixins.json
src/main/resources/assets/phosphophyllite/blockstates/: phosphophyllite_ore.json
src/main/resources/assets/phosphophyllite/lang/: en_us.json  pt_br.json
src/main/resources/assets/phosphophyllite/quartzstates/: phosphophyllite_ore.json5  reactor_casing.json5
(+411 files in other folders)
